--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -3,7 +3,10 @@ name: Production Deployment Pipeline
 on:
   push:
     branches:
-      - setup-ci
+      - main
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
 jobs:
   publish:
@@ -18,9 +21,17 @@ jobs:
         cmd: build
 
     - name: Deploy to Netlify
+      if: ${{ github.event_name == 'push' }}
       uses: netlify/actions/cli@master
       with:
-        args: deploy --dir=dist --prod --message "GitHub Actions Production Deployment"
+        args: deploy --dir=dist --prod --message="GitHub Actions Production Deployment"
       env:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+    - name: Bump version and push tag
+      if: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+      uses: anothrNick/github-tag-action@3840ec22ac98e14d981375e3ae2d8d0392964521
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
+        DEFAULT_BUMP: patch
