--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -16,9 +16,11 @@ jobs:
     - uses: borales/actions-yarn@v3.0.0
       with:
         cmd: install
+    # lint
     - uses: borales/actions-yarn@v3.0.0
       with:
         cmd: build
+    # test
 
     - name: Deploy to Netlify
       if: ${{ github.event_name == 'push' }}
@@ -29,7 +31,7 @@ jobs:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
     - name: Bump version and push tag
-      if: ${{ contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+      if: ${{ !contains(join(github.event.commits.*.message), '#skip') }}
       uses: anothrNick/github-tag-action@3840ec22ac98e14d981375e3ae2d8d0392964521
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
