--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -31,9 +31,8 @@ jobs:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
     - name: Bump version and push tag
-      if: ${{ !contains(join(github.event.commits.*.message), '#skip') }}
+      if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
       uses: anothrNick/github-tag-action@3840ec22ac98e14d981375e3ae2d8d0392964521
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
         DEFAULT_BUMP: patch
