--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "continuous-threejs-webpack",
+  "name": "threejs-webpack-ci",
   "version": "0.1.0",
   "description": "Basic setup of three.js and webpack with added CI/CD",
   "scripts": {
