--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -32,7 +32,6 @@ jobs:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
     - name: Bump version and push tag
       if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
-      uses: anothrNick/github-tag-action@3840ec22ac98e14d981375e3ae2d8d0392964521
+      uses: anothrNick/github-tag-action@v1.52.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: patch
